# UAV

./: .gitignore  CMakeLists.txt  README.md
Guidance/: CMakeLists.txt  README.md
Guidance/Source/: Guidance.cpp  Guidance.h  IPC.cpp  Loggable.cpp  Loggable.h  Logger.cpp  Logger.h  PID.cpp  PID.h  PIDPipeline.cpp  PIDPipeline.h  Route.cpp  Route.h  Waypoint.cpp  Waypoint.h  main.cpp
IPC/: CMakeLists.txt  README.md
IPC/Source/: IPC.cpp  IPC.h  enums.h
XplnComms/: CMakeLists.txt  README.md
XplnComms/Source/: Example.cpp  Guidance.cpp  Guidance.h  IPC.cpp  IPC.h  PID.cpp  PID.h  controls.cpp  controls.h  main.cpp
